--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Day3/website-project"]
 	path = Day3/website-project
-	url = https://github.com/Mayusha-R/website-project
+	url = https://github.com/Mayusha-R/website-project.git
